Api/k8s/prod-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-template-backend
  namespace: prod-backend-template
spec:
  type: ClusterIP
  selector:
    app: backend-template-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
